#5688 Failed CSV search requests now return sensible error responses